Fixed branch-alias in composer.json

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         }
     },
     "extra": {
-        "branch-alias": "1.0.x-dev"
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
