Added a ViewParameters ResponseTagger
Tags the response with any Repository Value Object added to the response.

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -39,6 +39,12 @@ services:
         tags:
             - {name: ezplatform.cache_response_tagger}
 
+    ezplatform.view_cache.response_tagger.view_parameters:
+        class: EzSystems\PlatformHttpCacheBundle\ResponseTagger\Delegator\ViewParametersTagger
+        arguments: ['@ezplatform.view_cache.response_tagger.dispatcher']
+        tags:
+            - {name: ezplatform.cache_response_tagger}
+
     ezplatform.view_cache.response_tagger.content_info:
         class: EzSystems\PlatformHttpCacheBundle\ResponseTagger\Value\ContentInfoTagger
         tags:
