--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "symfony/symfony": "^2.7 | ^3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7.0",
-        "matthiasnoback/symfony-dependency-injection-test": "0.*",
+        "phpunit/phpunit": "^5.7",
+        "matthiasnoback/symfony-dependency-injection-test": "~1.0",
         "phpspec/phpspec": "^3.2",
         "memio/spec-gen": "^0.6"
     },
