Fix EZP-28160: Wrong slot configuration for HTTP cache purge after copying subtree

--- a/src/Resources/config/slot.yml
+++ b/src/Resources/config/slot.yml
@@ -20,7 +20,7 @@ services:
         class: EzSystems\PlatformHttpCacheBundle\SignalSlot\CopySubtreeSlot
         parent: ezplatform.http_cache.signalslot.abstract_content
         tags:
-            - { name: ezpublish.api.slot, signal: ContentService\CopySubtreeSignal }
+            - { name: ezpublish.api.slot, signal: LocationService\CopySubtreeSignal }
 
     ezplatform.http_cache.signalslot.create_location:
         class: EzSystems\PlatformHttpCacheBundle\SignalSlot\CreateLocationSlot
