--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: php
 
-php:
-    - 5.6
-    - 7.0
+matrix:
+    include:
+        - php: 5.6
+        - php: 7.0
+        - php: 7.1
 
 # test only master (+ Pull requests)
 branches:
