EZP-28161: Enable php-cs-fixer aligned with v2.7.1 settings (#27)
* EZP-28161: [CS] Created php-cs-fixer config aligned with v2.7.1 settings

* EZP-28161: [Composer] Added dev dependency for php-cs-fixer:~2.7.1

* EZP-28161: [Composer] Added composer command fix-cs

Usage:
composer fix-cs

* EZP-28161: [CS] Fixed code according to CS rules

Fixed:
   1) src/EventSubscriber/XLocationIdResponseSubscriber.php (method_argument_space)
   2) src/AppCache.php (no_blank_lines_after_phpdoc)
   3) src/DependencyInjection/Compiler/KernelPass.php (no_blank_lines_after_phpdoc, blank_line_before_statement)
   4) src/DependencyInjection/EzSystemsPlatformHttpCacheExtension.php (concat_space)
   5) tests/SignalSlot/CopySubtreeSlotTest.php (method_separation, trailing_comma_in_multiline_array)
   6) tests/Proxy/TagAwareStoreTest.php (php_unit_dedicate_assert)

* [Travis] Created test matrix, added testing on PHP 7.1

* EZP-28161: [Travis] Added CodeStyle checking using php-cs-fixer

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: php
 
-php:
-    - 5.6
-    - 7.0
+matrix:
+    include:
+        - php: 5.6
+        - php: 7.0
+        - php: 7.1
+          env: CHECK_CS=true
 
 # test only master (+ Pull requests)
 branches:
@@ -14,7 +17,9 @@ before_script:
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
     - travis_retry composer install --prefer-dist --no-interaction
 
-script: php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty
+script:
+    - php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty
+    - if [ "$CHECK_CS" == "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
 
 notifications:
     email: false
