EZP-28183: Fix REST http cache on move operations (and more)
With this bundle, REST HttpCache is not cleared when moving content,
editing content types, (...) And given the time it will take to fix
REST server to return data that can be used for ResponseTaggers and
how this also affects custum responses given, as we now only purge
by specific tags. Adding this is thus safests.

This somewhat brings back what @Plopix suggested in #21, essentially making sure we
add all tags also to X-Location responses by loading location, but to be on the safe
side it does it using sudo() and catching NotFound. Opted not to reuse ReponseTaggers
here as they don't fully fit, and as we want to rewrite this header independently of
if view cache is enabled or not.

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -9,7 +9,7 @@ services:
 
     ezplatform.x_location_id.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\XLocationIdResponseSubscriber
-        arguments: ['@ezplatform.http_cache.tag_handler']
+        arguments: ['@ezplatform.http_cache.tag_handler', '@ezpublish.api.repository']
         tags:
             - { name: kernel.event_subscriber }
 
