--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.4.x-dev"
+            "dev-master": "0.4.x-dev",
+            "dev-tmp_ci_branch": "0.4.x-dev"
         }
     }
 }
