[Travis] Add functional testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,30 @@
+dist: trusty
+sudo: required
+
 language: php
 
+cache:
+    directories:
+        - $HOME/.composer/cache/files
+
+
+env:
+  global:
+    # For functional tests
+    - COMPOSE_FILE="doc/docker-compose/base-dev.yml:doc/docker-compose/selenium.yml"
+
 matrix:
+    fast_finish: true
     include:
         - php: 5.6
         - php: 7.0
         - php: 7.1
           env: CHECK_CS=true
+        # Functional
+        - php: 7.1
+          env: BEHAT_OPTS="--profile=rest --tags=~@broken --suite=fullJson" EZPLATFORM_BRANCH=1.13 SYMFONY_ENV=behat
+        - php: 7.1
+          env: BEHAT_OPTS="--profile=rest --tags=~@broken --suite=fullJson" EZPLATFORM_BRANCH=master SYMFONY_ENV=behat
 
 # test only master (+ Pull requests)
 branches:
@@ -15,11 +34,13 @@ branches:
 before_script:
     - travis_retry composer selfupdate
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-    - travis_retry composer install --prefer-dist --no-interaction
+    - if [ "$BEHAT_OPTS" = "" ] ; then travis_retry composer install --prefer-dist --no-interaction ; fi
+    - if [ "$BEHAT_OPTS" != "" ] ; then ./tests/.travis/prepare_for_functional_tests.sh ; fi
 
 script:
-    - php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty
-    - if [ "$CHECK_CS" == "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
+    - if [ "$BEHAT_OPTS" = "" ] ; then php vendor/bin/phpunit --coverage-text && php vendor/bin/phpspec run --format=pretty ; fi
+    - if [ "$BEHAT_OPTS" != "" ] ; then cd "$HOME/build/ezplatform"; docker-compose exec --user www-data app sh -c "bin/behat $BEHAT_OPTS" ; fi
+    - if [ "$CHECK_CS" = "true" ]; then phpenv config-rm xdebug.ini && ./vendor/bin/php-cs-fixer fix -v --dry-run --diff --show-progress=estimating; fi
 
 notifications:
     email: false
