[Travis] update docker path

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 env:
   global:
     # For functional tests
-    - COMPOSE_FILE="doc/docker-compose/base-dev.yml:doc/docker-compose/selenium.yml"
+    - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/selenium.yml"
 
 matrix:
     fast_finish: true
