--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
         - php: 7.1
           env: CHECK_CS=true
         # Functional
-        - php: 7.1
-          env: BEHAT_OPTS="--profile=rest --tags=~@broken --suite=fullJson" EZPLATFORM_BRANCH=1.13 SYMFONY_ENV=behat
+        - php: 5.6
+          env: BEHAT_OPTS="--profile=rest --tags=~@broken --suite=fullJson" EZPLATFORM_BRANCH=1.13 SYMFONY_ENV=behat PHP_IMAGE=ezsystems/php:5.6-v1
         - php: 7.1
           env: BEHAT_OPTS="--profile=rest --tags=~@broken --suite=fullJson" EZPLATFORM_BRANCH=master SYMFONY_ENV=behat
 
