--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "ezsystems/ezpublish-kernel": "^6.13.2@dev || ^7.1@dev",
-        "friendsofsymfony/http-cache-bundle": "~1.2|^1.3.8",
+        "friendsofsymfony/http-cache-bundle": "^1.3.13",
         "symfony/symfony": "^2.7 | ^3.1"
     },
     "require-dev": {
