--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "symfony/symfony": "^2.7 | ^3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "matthiasnoback/symfony-dependency-injection-test": "~1.0",
+        "phpunit/phpunit": "^5.7|^6.0",
+        "matthiasnoback/symfony-dependency-injection-test": "~1.0|~2.0",
         "phpspec/phpspec": "^3.2",
         "friendsofphp/php-cs-fixer": "~2.7.1",
         "memio/spec-gen": "^0.6"
