--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ezsystems/ezplatform-http-cache",
     "description": "HTTP cache handling for eZ Platform.",
     "type": "ezplatform-bundle",
-    "license": "GPL-2.0",
+    "license": "GPL-2.0-only",
     "authors": [
         {
             "name": "eZ Systems",
