EZP-28848: Enable using FOSHttpCache for tagging reponses
Enable usage of fos_httpcache_tag() and TagHandler in order to be
able to solve tagging relations which is template logic.

--- a/src/Resources/config/fos_http_cache.yml
+++ b/src/Resources/config/fos_http_cache.yml
@@ -10,8 +10,5 @@ user_context:
 
 tags:
     # Configure tag header for FosHttpCache
-    # WARNING: Please don't use the TagHandler from FOS yet in generic reusable code:
-    # 1. Until 2.x it is hardcoded to use comma separated list of tags, which won't work on Fastly and
-    #    will conflict with the one header per key format we currently use with xkey (as per their doc)
-    # 2. In FosHttpCache 1.x it is only available if proxy client is configured as "varnish" or "custom"
+    # See docs/using_tags.md for further info on usage
     header: '%ezplatform.http_cache.tags.header%'
