--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7|^6.0",
         "matthiasnoback/symfony-dependency-injection-test": "~1.0|~2.0",
-        "phpspec/phpspec": "^3.2",
+        "phpspec/phpspec": "^3.4 || ^4.2",
         "friendsofphp/php-cs-fixer": "~2.7.1",
-        "memio/spec-gen": "^0.6"
+        "memio/spec-gen": "^0.6 | ^0.8"
     },
     "autoload": {
         "psr-4": {
