--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -9,7 +9,7 @@ services:
 
     ezplatform.x_location_id.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\XLocationIdResponseSubscriber
-        arguments: ['@ezplatform.http_cache.tag_handler', '@ezpublish.api.repository']
+        arguments: ['@fos_http_cache.handler.tag_handler', '@ezpublish.api.repository']
         tags:
             - { name: kernel.event_subscriber }
 
@@ -19,7 +19,7 @@ services:
             - '$content.view_cache$'
             - '$content.ttl_cache$'
             - '$content.default_ttl$'
-            - '@ezplatform.http_cache.tag_handler'
+            - '@fos_http_cache.handler.tag_handler'
 
     ezplatform.view_cache.response_tagger.dispatcher:
         class: EzSystems\PlatformHttpCacheBundle\ResponseTagger\Delegator\DispatcherTagger
