--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -1,4 +1,5 @@
 services:
+    # EventSubscriber
     ezplatform.view_cache.response_subscriber:
         class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\HttpCacheResponseSubscriber
         arguments:
@@ -13,6 +14,19 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
+    ezplatform.rest_cache_tagging.view_subscriber:
+        class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\RestKernelViewSubscriber
+        arguments: ['@fos_http_cache.handler.tag_handler']
+        tags:
+            - { name: kernel.event_subscriber }
+
+    ezplatform.user_context_tagger.response_subscriber:
+        class: EzSystems\PlatformHttpCacheBundle\EventSubscriber\UserContextSubscriber
+        arguments: ['@fos_http_cache.handler.tag_handler']
+        tags:
+            - { name: kernel.event_subscriber }
+
+    # ResponseConfigurator
     ezplatform.view_cache.response_configurator:
         class: EzSystems\PlatformHttpCacheBundle\ResponseConfigurator\ConfigurableResponseCacheConfigurator
         arguments:
@@ -21,6 +35,7 @@ services:
             - '$content.default_ttl$'
             - '@fos_http_cache.handler.tag_handler'
 
+    # ResponseTagger
     ezplatform.view_cache.response_tagger.dispatcher:
         class: EzSystems\PlatformHttpCacheBundle\ResponseTagger\Delegator\DispatcherTagger
         # Taggers are added by a compiler pass
