Inital version of Twig ez_http_tag_location() function
1. Refactors Response taggers to get rid of (by now) unused configurator and reponse, in order to:
2. Expose Twig extension to have function for tagging locations

Reason for picking location: It has all data needed, we need lcoation in order to be
able to know which subtree to tag for (to make sure cache is cleared on subtree operations).

If needed there could be a helper for contentInfo as well which loads main for you.

--- a/src/Resources/config/view_cache.yml
+++ b/src/Resources/config/view_cache.yml
@@ -77,3 +77,10 @@ services:
         parent: ezplatform.view_cache.response_tagger.abstract_value
         tags:
             - {name: ezplatform.cache_response_tagger}
+
+    # Twig
+    ezplatform.view_cache.twig_extension:
+        class: EzSystems\PlatformHttpCacheBundle\Twig\ContentTaggingExtension
+        arguments: ['@ezplatform.view_cache.response_tagger.dispatcher']
+        tags:
+            - {name: twig.extension}
